# chromium-tool

./: .gitignore  Cargo.toml  Cargo.toml.minimal  Cargo.toml.optimized  Cargo.toml.optimized_full  OPTIMIZATION_NOTES.md  PENDING_REQUEST_ANALYSIS.md  README.md  config.toml  代码检查报告.md
oem/theme/chromium/mac/: app.icns
src/: main.rs
src/api/: mod.rs  routes.rs  state.rs  ws.rs
src/api/handlers/: build.rs  config.rs  id_finder.rs  mod.rs  oem.rs  task.rs
src/config/: config.rs
src/error/: error.rs  mod.rs
src/image/: chromium_icon.rs  image_util.rs  mod.rs
src/model/: build.rs  id_finder.rs  mod.rs  oem.rs  state.rs  task.rs
src/repository/: database.rs  mod.rs  task.rs
src/service/: mod.rs
src/service/backup/: manager.rs  mod.rs
src/service/email/: mod.rs  sender.rs
src/service/id_finder/: finder.rs  mod.rs
src/service/oem/: mod.rs  theme_generator.rs
src/service/task/: cache.rs  manager.rs  mod.rs  service.rs
src/templates/: index.html  pkgbuild.html
src/util/: git.rs  hash.rs  mod.rs  path.rs  progress.rs  retry.rs  time.rs
