[package]
name = "chromium_tool"
version = "0.0.0"
edition = "2021"

[dependencies]
# ============================================
# 核心依赖（用户指定）
# ============================================
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
ring = "0.17"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }

# ============================================
# 错误处理
# ============================================
thiserror = "1.0"

# ============================================
# Web 框架
# ============================================
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-login = "0.16"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# ============================================
# 状态机（高优先级）
# ============================================
# sm = "0.3"  # 暂时使用简单枚举实现，后续可以添加

# ============================================
# 任务管理（中优先级）
# ============================================
dashmap = "5.5"
tokio-cron-scheduler = "0.8"

# ============================================
# 配置管理（高优先级）
# ============================================
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
serde-aux = "4.0"

# ============================================
# 命令执行和重试（中优先级）
# ============================================
retry = "2.0"
command-group = "5.0"

# ============================================
# 文件操作和进度（中优先级）
# ============================================
indicatif = "0.17"
walkdir = "2.5"
rayon = "1.8"

# ============================================
# 缓存（中优先级）
# ============================================
moka = { version = "0.12", features = ["future"] }

# ============================================
# 限流（低优先级）
# ============================================
governor = "0.6"
nonzero = "0.2"

# ============================================
# 监控（低优先级）
# ============================================
axum-prometheus = "0.4"
prometheus = "0.13"

# ============================================
# 数据库
# ============================================
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# ============================================
# 编码和哈希
# ============================================
hex = "0.4"

# ============================================
# 图像处理
# ============================================
image = "0.25"
resvg = "0.44"
tiny-skia = "0.11"
icns = "0.3"
ico = "0.3"
pic-scale = "0.3"  # 保留旧代码依赖

# ============================================
# SVG 处理
# ============================================
svg = "0.18"
usvg = "0.44"

# ============================================
# HTTP 客户端
# ============================================
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ============================================
# 日志系统
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "fmt"] }
tracing-error = "0.2"
tracing-appender = "0.2"  # 支持日志文件输出

# ============================================
# 序列化
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# 编码
# ============================================
base64 = "0.22"

# ============================================
# 邮件
# ============================================
lettre = "0.11"

# ============================================
# 正则表达式
# ============================================
regex = "1.11"

# ============================================
# 工具库
# ============================================
itertools = "0.13"

# ============================================
# 系统调用
# ============================================
nix = "0.29"
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

# 注意：profile 应该在 workspace 根目录的 Cargo.toml 中配置
